<resources>
    <string name="app_name">Allegro</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="iniciarClase">Inciar clase</string>
    <string name="title_activity_maps">Map</string>
    <string name="ingrese_nombre">Ingrese Nombre</string>
    <string name="ingrese_apellido">Ingrese Apellido</string>
    <string name="ingrese_mail">Ingrese Email</string>
    <string name="Modifique_mail">Modifique Email</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="profesora">PROFESORA:</string>
    <string name="ruta_del_archivo">ruta del archivo</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="otro">OTRO</string>
    <string name="historial">HISTORIAL</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="suscripci_n">SUSCRIPCIÓN</string>
    <string name="redes_sociales">REDES SOCIALES</string>
    <string name="cuenta">CUENTA</string>
    <string name="nombre">NOMBRE</string>
    <string name="home">home</string>
    <string name="todo">TODO</string>
    <string name="title_activity_registro_clases_profesora">registroClasesProfesora</string>
    <string name="tab_text_1">Registar Profesora</string>
    <string name="tab_text_2">Registar Clase</string>
    <string name="tab_text_3">Editar Clase</string>
    <string name="tituloRegistrar">TABLERO CONTROL CLASES</string>
    <string name="title_activity_registar_clases">Tablero de control</string>
    <string-array name="SeleccionarTipo">
        <item>"Seleccionar"</item>
        <item>"Debes seleccionar Tipo de Danza"</item>
    </string-array>
    <string name="txtNombre">Ingrese nombre</string>
    <string name="txtApellido">Ingrese apellido</string>
    <string name="txtEdad">Ingrese edad</string>
    <string name="numero_de_clase">Numero de clase:</string>
    <string name="nombre_profesora">Nombre profesora:</string>
    <string name="fecha_publicaci_n">FECHA DE\nPUBLICACIÓN:</string>
    <string name="clasica">CLASICA</string>
    <string name="JAZZ">JAZZ</string>
    <string name="fortalecer1">EJERCICIOS PARA FORTALECER PIE-PUNTAS</string>
    <string name="balletrepertorio1">BALLET REPERTORIO</string>
    <string name="elongacion">ELONGACIÓN</string>
    <string name="contemporaneo">CONTEMPORANEO</string>
    <string name="yogance">YOGA</string>
    <string name="descripcionClasica">Clases de Danza Clásica método vaganova actualizado con conceptos modernos.
        La clase se compone por todos los ejercicios fundamentales divida en dos grandes momentos:\n
        •BARRA-CENTRO. \n
        •Clases PROGRESIVAS y ACUMULATIVAS.
</string>
    <string name="descripcionContemporaneo">Clases de Danza Contemporanea que aborda los conceptos básicos de esta disciplina: \n
        suelo, trabajo de la gravedad y el peso, exploración del movimiento, consciencia corporal, entre otros.
</string>
    <string name="descripcionBallet">Clases complemento de la danza clásica. Montaje de las variaciones
        del ballet clásico y neoclásico repertorio más reconocido a nivel mundial.</string>
    <string name="descripcionYogance">Clases de yoga Fusión:\n
        •Hatha Yoga \n
        •Yoga Flow \n
        •Trabajo de técnicas de respiración y relajación.
    </string>
    <string name="descripcionElongacion">Clases complemento de la Danza Clásica. Dictada por profesora de danza y licenciada en kinesiologia.
        Con ejercicios con objetivos específicos: \n
       •Elongación.
        </string>
    <string name="descripcionJazz">Clases de Danza Jazz. Compuesta por todos los ejercicios y estilos:\n
        •Modern Jazz \n
        •Theater Jazz \n
        •Jazz Contemporaneo \n
        •Jazz Lirical \n
        •Jazz Fusión.</string>
    <string name="descripcionFortalcerPuntas">Clases complemento de la danza clásica. Dictada por profesora de danza y licenciada en kinesiologia.
        Con ejercicios con objetivos específicos: \n
        •Fuerza de PIE. \n
        •Trabajo de Puntas.
       </string>
    <string name="nivel">NIVELES: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcionNivelIncicial">Iniciación en el movimiento, a través de la elongación. </string>
    <string name="descripcionNivelIncialClasica">Iniciación en el movimiento, a través de la danza clásica y la expresión corporal.
        Utilizando técnicas adecuadas a la edad; como juegos, cuentos, disfraces, etc.
        La clase está a cargo de una maestra jardinera. Edades: de 3 a 5 años.</string>
    <string name="descripcionNivelIncialJazz">Iniciación en el movimiento, a través de la danza jazz y la expresión corporal.
        Utilizando técnicas adecuadas a la edad; como juegos, cuentos, disfraces, etc.
        La clase está a cargo de una maestra jardinera. Edades: de 3 a 5 años.</string>
    <string name="descripcionPrincipianteI">• Curso Técnico: 1° año – 2° año \n
        • Edades: 6 a 8 años de edad con ningún año de danza anterior o 1 hasta 2 años de danza anterior.</string>
    <string name="descripcionPrincipianteII">• Curso Técnico: 3° año  - 4° año. \n
            • Edades: 8 a  10  años  con  1 año hasta 4 años de danza anterior. </string>
    <string name="descripcionIntermedio">• Curso Técnico: 5° año – 6° año - 7° año \n
    • Edades: 10 a 13 años  con 3 o 4 años de danza anterior. Con manejo de zapatillas de puntas (inicial - intermedio). </string>
    <string name="descripcionAvanzado">•  Curso Técnico: 7 ° año  a 12° año. \n
        •  Edades: 13 años en adelante con 6 años de danza mínimo. Con manejo de zapatillas de puntas ( intermedio - avanzado) </string>
    <string name="descripcionNivelIncicialConte">Iniciación en el movimiento, a través de la danza contemporánea.
        Utilizando técnicas adecuadas a la edad; como juegos, cuentos, disfraces, etc.
        La clase está a cargo de una maestra jardinera. Edades: de 3 a 5 años.
    </string>
    <string name="claseNro">CLASE NRO°:</string>
    <string name="fechavideo">FECHA VIDEO:</string>
    <string name="clasesencurso">Clases iniciadas</string>
    <string name="clasesfinalziada">Clases finalizadas</string>
    <string name="repetirClase">repetir clase</string>
    <string name="continuarClase">continuar clase</string>
    <string name="tiempoClase">TIEMPO:</string>
    <string name="fecha">"INICIÓ EL: "</string>
    <string name="nivele">NIVEL:</string>
    <string name="fechaFinalada">FINALIZÓ EL:</string>
    <string name="ingrese_contraseña">Ingrese Contraseña</string>
    <string name="instagram">Instagram</string>
    <string name="allegroInstagram">\@allegroinstitutodedanzas</string>
    <string name="fitnesDance">FITNESS DANCE</string>
    <string name="btnSelectProfesor">Profesor</string>
    <string name="btnSelectAlumno">Alumno</string>
    <string name="savedToken">\"savedToken\"</string>
    <string name="completeRegister">Completar Registro</string>
    <string name="ingrese_celular">Ingrese Celular</string>
    <string name="ingrese_fechanacimiento">Fecha de Nacimiento</string>
    <string name="btnCompleteRegister">Completar</string>
    <string name="txtError">Error:</string>
    <string name="closeApp">Cerrar Aplicacion</string>
    <string name="title_activity_yotube">YotubeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Elegir imagen</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="txt_ano">1</string>
    <string name="txt_resultado">Resultado de evaluación:</string>
    <string name="txt_materia">Materia: </string>
    <string name="txt_se_evaluo">Se evaluó: </string>
    <string name="txt_hora">Fecha:</string>
    <string name="txt_puntos">Sumaste un total de:</string>
    <string name="txt_resultados">INFORME</string>
    <string name="barraseperadora">/</string>
    <string name="tipodedesafio">TIPO DE DESAFIO:</string>
    <string name="txt_cantidad">Realizado/Total</string>
    <string name="txt_points">Acutales/Total</string>
    <string name="txt_desafio">Desafio</string>
    <string name="txt_puntos_a">Puntos</string>
    <string name="anterior"><![CDATA[<< Anterior]]></string>
    <string name="comoFunciona">¿Cómo funciona?</string>
    <string name="explainFuncionamientoIa">AllegroApp cuenta con un modelo de inteligencia artificial
        entrenado con cientos de imagenes que le permite evaluar de forma automatica las poses de la materia
        danza clasica.</string>
    <string name="explainFuncionamientoIa2">La IA evalua que tan preciso realizas cada una de las poses a partir
        de la deteccion de 32 puntos del cuerpo. La forma de evaluar es  con una puntación de 0-100, donde: \n
        \n
         1. 0-100 Realizado de forma correcta: en este caso se pintará un circulo de color verde en la
    parte superior de la cabeza  \n
      \n
        2. 0-100 Realizado de forma incorrecta: en este caso se pintará un circulo de color rojo en la
    parte superior de la cabeza.

    </string>
</resources>