<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulAllegro"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_close_dialog_explain_ia"
        android:layout_width="45dp"
        android:layout_gravity="right"
        android:layout_height="45dp"
        android:background="@drawable/cerrarsesion"></ImageButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/comoFunciona"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/explainFuncionamientoIa"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"></TextView>

        <TextView
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:text="@string/explainFuncionamientoIa2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"></TextView>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/dialogExplainIAAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/anterior">
    </TextView>

</LinearLayout>