<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.core.clases.ResultActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:background="@drawable/fondotoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fondo3"></ImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_resultados"
                        android:text="@string/txt_resultados"
                        style="@style/tituloHome"
                        android:textSize="30sp"
                        ></TextView>
                    <View
                        android:id="@+id/divider5"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="75dp"
                        android:layout_marginRight="75dp"
                        android:layout_height="2dp"
                        android:background="@color/blanco" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondocard"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/txt_materia"
                    style="@style/txtResultadosBold">
                </TextView>
                <TextView
                    android:id="@+id/txt_materia_resultado"
                    android:text="@string/txt_materia"
                    style="@style/txtResultados">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/txt_se_evaluo"
                    style="@style/txtResultadosBold">
                </TextView>
                <TextView
                    android:id="@+id/txt_evaluado"
                    android:text="@string/txt_materia"
                    style="@style/txtResultados">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/txt_hora"
                    style="@style/txtResultadosBold">
                </TextView>
                <TextView
                    android:id="@+id/txt_fecha_resultados"
                    android:text="@string/txt_materia"
                    style="@style/txtResultados">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:text="@string/txt_resultado"
            android:layout_gravity="center"
            android:layout_marginTop="25sp"
            android:textSize="20sp"
            style="@style/txtResultadosBold">
        </TextView>

        <TextView
            android:id="@+id/txt_resultado"
            android:text="@string/txt_ano"
            android:layout_gravity="center"
            android:textSize="45sp"
            style="@style/txtResultadosBold">
        </TextView>

        <TextView
            android:text="@string/txt_puntos"
            android:layout_gravity="center"
            android:layout_marginTop="25sp"
            android:textSize="20sp"
            style="@style/txtResultadosBold">
        </TextView>

        <TextView
            android:id="@+id/txt_puntos_sumados"
            android:text="@string/txt_ano"
            android:layout_gravity="center"
            android:textSize="45sp"
            style="@style/txtResultadosBold">
        </TextView>

    </LinearLayout>

</ScrollView>