<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardAdaptadorDesafios"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="45dp"
    android:layout_marginBottom="20dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/azulAllegro"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgraoudcardsdesafios"
        android:orientation="vertical">

        <TextView
            android:id="@+id/desafioname"
            style="@style/tituloHome"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/fecha_publicaci_n"
            android:textSize="25dp"
            android:textStyle="bold" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/white">

        </com.google.android.material.divider.MaterialDivider>

        <TextView
            android:id="@+id/desafiondescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/fecha_publicaci_n"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                style="@style/StyleDesafios"
                android:textStyle="italic"
                android:text="@string/tipodedesafio"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tipodedesafio"
                android:textStyle="italic"
                style="@style/StyleDesafios"
                android:layout_marginLeft="2dp"
                android:textSize="15dp" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/white"></com.google.android.material.divider.MaterialDivider>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/StyleDesafios"
                    android:layout_gravity="center"
                    android:text="@string/txt_desafio"
                    android:textSize="12dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="80dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/StyleDesafios"
                    android:layout_gravity="center"
                    android:text="@string/txt_puntos_a"
                    android:textSize="12dp"></TextView>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearlayoutdesafio"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/circulodesafioincompleto"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtrealizado"
                        style="@style/StyleDesafios"
                        android:text="@string/txt_ano"></TextView>

                    <TextView
                        style="@style/StyleDesafios"
                        android:text="@string/barraseperadora"></TextView>

                    <TextView
                        android:id="@+id/txttotal"
                        style="@style/StyleDesafios"
                        android:text="@string/txt_ano"></TextView>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayoutpuntos"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:background="@drawable/circulodesafioincompleto"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtpointsnow"
                        style="@style/StyleDesafios"
                        android:text="@string/txt_ano"></TextView>

                    <TextView
                        style="@style/StyleDesafios"
                        android:text="@string/barraseperadora"></TextView>

                    <TextView
                        android:id="@+id/txtPointsTotal"
                        style="@style/StyleDesafios"
                        android:text="@string/txt_ano"></TextView>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/StyleDesafios"
                    android:layout_gravity="center"
                    android:text="@string/txt_cantidad"
                    android:textSize="12dp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/StyleDesafios"
                    android:layout_gravity="center"
                    android:text="@string/txt_points"
                    android:textSize="12dp"></TextView>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>